# fh-aachen-graph-library

./: .gitignore  Cargo.toml  README.md
benches/: graph_benchmarks.rs
benches/algorithms/: count_connected_subgraphs.rs  maximum_flow.rs  mod.rs  mst.rs  shortest_path.rs  tsp.rs
benches/graph/: creation.rs
src/: lib.rs
src/algorithms/: bfs_iter.rs  count_connected_graphs.rs  count_connected_subgraphs.rs  dfs_iter.rs  iter.rs  mod.rs  utils.rs
src/algorithms/maximum_flow/: edmonds_karp.rs  mod.rs
src/algorithms/mst/: kruskal.rs  mod.rs  prim.rs  union_find.rs
src/algorithms/shortest_path/: bellman_ford.rs  dijkstra.rs  mod.rs  single_source_shortest_paths.rs
src/algorithms/tsp/: branch_and_bound.rs  brute_force.rs  double_tree.rs  mod.rs  nearest_neighbor.rs
src/graph/: adjacency_list.rs  adjacency_matrix.rs  direction.rs  error.rs  from_file.rs  graph.rs  graph_structs.rs  mod.rs  path.rs  traits.rs
tests/: integration_tests.rs
tests/algorithms/: count_connected_subgraphs.rs  maximum_flow.rs  mod.rs  mst.rs  mst_prim.rs  shortest_path.rs  tsp.rs
tests/graph/: base.rs  creation.rs
