[package]
name = "graph-library"
version = "0.1.0"
edition = "2021"

[dependencies]
delegate = "0.13.3"
enum-as-inner = "0.6.1"
num-traits = "0.2.19"
rustc-hash = "2.1.1"
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.25.0"
criterion = { git = "https://github.com/Niklas-Mezynski/criterion.rs.git" }
itertools = "0.14.0"

[[bench]]
name = "graph_benchmarks"
harness = false

[[test]]
name = "integration_tests"
